--- a/index.html
+++ b/index.html
@@ -43,9 +43,95 @@
       </header>
 
       <!-- Header Section END -->
+      <!-- Clear DIV -->
       <div class="div-clear"></div>
       <hr />
-      <main></main>
+      <main>
+        <!-- personal information start -->
+        <section id="personal-information">
+          <div class="content">
+            <div class="left-div">
+              <h3>Personal Information</h3>
+            </div>
+            <div class="right-div">
+              <p>
+                Address: Sunamukhi, Ulia Bazar, Islampur, jamalpur 2020,
+                Mymnsingh
+              </p>
+              <p>DoB: 5 May, 1998</p>
+              <p>Nationality: Bangladeshi</p>
+              <p>Religion: Islam</p>
+            </div>
+          </div>
+        </section>
+
+        <!-- personal information end -->
+        <!-- clear div -->
+        <div class="div-clear"></div>
+        <hr class="common-hr" />
+
+        <!-- work experience  start -->
+        <section id="work-experience">
+          <div class="content">
+            <div class="left-div">
+              <h3>Work Experience</h3>
+            </div>
+            <div class="right-div">
+              <h3>Intern - Web Design</h3>
+              <h4>December 2019 — March 2020</h4>
+              <h4>Shikhbe Sobai</h4>
+              <h4>Work Stack:</h4>
+              <ul>
+                <li>PSD To HTML</li>
+                <li>Site Redesign</li>
+                <li>Responsive Website</li>
+                <li>Website Design From Scratch</li>
+                <li>HTML & WordPress Site Bug Fixing</li>
+              </ul>
+            </div>
+          </div>
+        </section>
+        <!-- clear div -->
+        <div class="div-clear"></div>
+        <hr class="common-hr" />
+
+        <!--work experience end -->
+        <!-- Skill Section  start -->
+        <section id="-skill">
+          <div class="content">
+            <div class="left-div">
+              <h3>Skills</h3>
+            </div>
+            <div class="right-div">
+              <h3>Front End / Web Design</h3>
+              <p>
+                * HTML, CSS, Bootstrap, JavaScript, React, Firebase, WP Theme
+                Customization.
+              </p>
+              <br />
+
+              <h3>Freelance Web Designer</h3>
+              <p>* PSD to HTML convert, Responsive Website , Landing Page.</p>
+              <br />
+
+              <h3>Database</h3>
+              <p>* MySQL, MongoDB, Firebase</p>
+              <br />
+
+              <h3>Database</h3>
+              <p>
+                * OS - Linux (Ubuntu) <br />
+                * Git, GitHub
+              </p>
+            </div>
+          </div>
+        </section>
+        <!-- clear div -->
+        <div class="div-clear"></div>
+        <hr class="common-hr" />
+
+        <!--work experience end -->
+      </main>
 
       <footer></footer>
     </div>
