add education section with desing

--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
             </div>
             <div class="right-div">
               <h3>Intern - Web Design</h3>
+
+              <h3>Shikhbe Sobai</h3>
               <h4>December 2019 — March 2020</h4>
-              <h4>Shikhbe Sobai</h4>
               <h4>Work Stack:</h4>
               <ul>
                 <li>PSD To HTML</li>
@@ -97,7 +98,7 @@
 
         <!--work experience end -->
         <!-- Skill Section  start -->
-        <section id="-skill">
+        <section id="skill">
           <div class="content">
             <div class="left-div">
               <h3>Skills</h3>
@@ -131,6 +132,80 @@
         <hr class="common-hr" />
 
         <!--work experience end -->
+        <!-- certification Section  start -->
+        <section id="certification">
+          <div class="content">
+            <div class="left-div">
+              <h3>Certification</h3>
+            </div>
+
+            <div class="right-div">
+              <h3>Responsive Web Design</h3>
+
+              <h3>Shikhbe Sobai</h3>
+              <h4>Jun 2019- November 2019</h4>
+              <h4>Learn:</h4>
+              <ul>
+                <li>HTML 5</li>
+                <li>CSS 3</li>
+                <li>BootStrap</li>
+                <li>JavaScript</li>
+                <li>PSD to HTML</li>
+                <li>WordPress Theme Customization</li>
+              </ul>
+              <br />
+              <h3>Complete Web Design</h3>
+              <h3>Programming Hero</h3>
+              <h4>January 2021- Ongoing</h4>
+              <h4>Learn:</h4>
+              <ul>
+                <li>HTML 5</li>
+                <li>CSS 3</li>
+                <li>BootStrap</li>
+                <li>JavaScript, ES6</li>
+                <li>React Js</li>
+                <li>Firebase</li>
+              </ul>
+            </div>
+          </div>
+        </section>
+        <!-- clear div -->
+        <div class="div-clear"></div>
+        <hr class="common-hr" />
+
+        <!--certification end -->
+
+        <!-- Education  start -->
+        <section id="education">
+          <div class="content">
+            <div class="left-div">
+              <h3>Education</h3>
+            </div>
+
+            <div class="right-div">
+              <h3>B.Sc. In Computer Science & Engineering</h3>
+
+              <h3>SouthEast University</h3>
+              <h4>September 2016 — July 2021</h4>
+              <p><strong>Result:</strong> CGPA-3.40 (Scale=4.00)</p>
+
+              <br />
+              <h3>
+                <h3>Higher Secondary School Certificate (HSC)</h3>
+                <h3>Govt. Science Collage</h3>
+                <h4>June 2013 — August 2015</h4>
+
+                <p><strong>Group: </strong>Science</p>
+                <p><strong>Result: </strong> GPA-4.50 (Scale=5.00)</p>
+
+                <p><strong>Board: </strong>Dhaka</p>
+              </h3>
+            </div>
+          </div>
+        </section>
+        <!-- clear div -->
+        <div class="div-clear"></div>
+        <hr class="common-hr" />
       </main>
 
       <footer></footer>
