complete main part

--- a/index.html
+++ b/index.html
@@ -47,29 +47,6 @@
       <div class="div-clear"></div>
       <hr />
       <main>
-        <!-- personal information start -->
-        <section id="personal-information">
-          <div class="content">
-            <div class="left-div">
-              <h3>Personal Information</h3>
-            </div>
-            <div class="right-div">
-              <p>
-                Address: Sunamukhi, Ulia Bazar, Islampur, jamalpur 2020,
-                Mymnsingh
-              </p>
-              <p>DoB: 5 May, 1998</p>
-              <p>Nationality: Bangladeshi</p>
-              <p>Religion: Islam</p>
-            </div>
-          </div>
-        </section>
-
-        <!-- personal information end -->
-        <!-- clear div -->
-        <div class="div-clear"></div>
-        <hr class="common-hr" />
-
         <!-- work experience  start -->
         <section id="work-experience">
           <div class="content">
@@ -140,32 +117,36 @@
             </div>
 
             <div class="right-div">
-              <h3>Responsive Web Design</h3>
+              <div class="certification-left">
+                <h3>Responsive Web Design</h3>
 
-              <h3>Shikhbe Sobai</h3>
-              <h4>Jun 2019- November 2019</h4>
-              <h4>Learn:</h4>
-              <ul>
-                <li>HTML 5</li>
-                <li>CSS 3</li>
-                <li>BootStrap</li>
-                <li>JavaScript</li>
-                <li>PSD to HTML</li>
-                <li>WordPress Theme Customization</li>
-              </ul>
-              <br />
-              <h3>Complete Web Design</h3>
-              <h3>Programming Hero</h3>
-              <h4>January 2021- Ongoing</h4>
-              <h4>Learn:</h4>
-              <ul>
-                <li>HTML 5</li>
-                <li>CSS 3</li>
-                <li>BootStrap</li>
-                <li>JavaScript, ES6</li>
-                <li>React Js</li>
-                <li>Firebase</li>
-              </ul>
+                <h3>Shikhbe Sobai</h3>
+                <h4>Jun 2019- November 2019</h4>
+                <h4>Learn:</h4>
+                <ul>
+                  <li>HTML 5</li>
+                  <li>CSS 3</li>
+                  <li>BootStrap</li>
+                  <li>JavaScript</li>
+                  <li>PSD to HTML</li>
+                  <li>WordPress Theme Customization</li>
+                </ul>
+              </div>
+
+              <div class="certification-right">
+                <h3>Complete Web Design</h3>
+                <h3>Programming Hero</h3>
+                <h4>January 2021- Ongoing</h4>
+                <h4>Learn:</h4>
+                <ul>
+                  <li>HTML 5</li>
+                  <li>CSS 3</li>
+                  <li>BootStrap</li>
+                  <li>JavaScript, ES6</li>
+                  <li>React Js</li>
+                  <li>Firebase</li>
+                </ul>
+              </div>
             </div>
           </div>
         </section>
@@ -183,14 +164,15 @@
             </div>
 
             <div class="right-div">
-              <h3>B.Sc. In Computer Science & Engineering</h3>
+              <div class="education-left">
+                <h3>B.Sc. In Computer Science & Engineering</h3>
 
-              <h3>SouthEast University</h3>
-              <h4>September 2016 — July 2021</h4>
-              <p><strong>Result:</strong> CGPA-3.40 (Scale=4.00)</p>
+                <h3>SouthEast University</h3>
+                <h4>September 2016 — July 2021</h4>
+                <p><strong>Result:</strong> CGPA-3.40 (Scale=4.00)</p>
+              </div>
 
-              <br />
-              <h3>
+              <div class="education-right">
                 <h3>Higher Secondary School Certificate (HSC)</h3>
                 <h3>Govt. Science Collage</h3>
                 <h4>June 2013 — August 2015</h4>
@@ -199,10 +181,100 @@
                 <p><strong>Result: </strong> GPA-4.50 (Scale=5.00)</p>
 
                 <p><strong>Board: </strong>Dhaka</p>
-              </h3>
+              </div>
             </div>
           </div>
         </section>
+        <!-- clear div -->
+        <div class="div-clear"></div>
+        <hr class="common-hr" />
+        <!-- Projects  start -->
+        <section id="projects">
+          <div class="content">
+            <div class="left-div">
+              <h3>Projects</h3>
+            </div>
+
+            <div class="right-div">
+              <ul>
+                <li>Smart Home Automation System.</li>
+                <li>
+                  Cuda - Portfolio Template
+                  (https://kafiabdullah.github.io/Cuda/)
+                </li>
+                <li>
+                  Treatment At Home Bangladesh
+                  (https://kafiabdullah.github.io/hospital/)
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
+        <!-- Projects End -->
+        <!-- clear div -->
+        <div class="div-clear"></div>
+        <hr class="common-hr" />
+
+        <!-- personal information start -->
+        <section id="personal-information">
+          <div class="content">
+            <div class="left-div">
+              <h3>Personal Information</h3>
+            </div>
+            <div class="right-div">
+              <p>Father’s Name: Md. Shamsul Alam</p>
+              <p>Mother’s Name: Salma khatun</p>
+              <p>Marital Status: Unmarried</p>
+
+              <p>DoB: 5 May, 1998</p>
+              <p>Nationality: Bangladeshi</p>
+              <p>Religion: Islam</p>
+              <p>
+                Address: Sunamukhi, Ulia Bazar, Islampur, jamalpur 2020,
+                Mymnsingh
+              </p>
+            </div>
+          </div>
+        </section>
+
+        <!-- personal information end -->
+        <!-- clear div -->
+        <div class="div-clear"></div>
+        <hr class="common-hr" />
+
+        <!-- interest section start -->
+        <section id="interest">
+          <div class="content">
+            <div class="left-div">
+              <h3>Interest</h3>
+            </div>
+            <div class="right-div">
+              <p>Explore New Technology, Programming, Drinking Coffee</p>
+            </div>
+          </div>
+        </section>
+
+        <!-- interest end -->
+        <!-- clear div -->
+        <div class="div-clear"></div>
+        <hr class="common-hr" />
+
+        <!-- reference section start -->
+        <section id="reference">
+          <div class="content">
+            <div class="left-div">
+              <h3>Reference</h3>
+            </div>
+            <div class="right-div">
+              <p>Md. Ishan Arefin Hossain</p>
+              <p>Lecturer</p>
+              <p>Dept. of CSE, Southeast University</p>
+              <p><strong>Email:</strong> ishanarefin@gmail.com</p>
+            </div>
+          </div>
+        </section>
+
+        <!-- reference end -->
         <!-- clear div -->
         <div class="div-clear"></div>
         <hr class="common-hr" />
