design footer section and complete the project

--- a/index.html
+++ b/index.html
@@ -280,7 +280,12 @@
         <hr class="common-hr" />
       </main>
 
-      <footer></footer>
+      <footer class="bottom-container">
+          <a href="https://www.facebook.com/abdullah.27">Facebook</a>
+          <a href="https://www.linkedin.com/in/md-abdullah-b344ab137/">Linkedin</a>
+          <a href="https://github.com/kafiabdullah">GitHub</a>
+          <p>Copyright &copy; Abdullah 2021</p>
+      </footer>
     </div>
 
     <!-- Container Div END -->
