add new work expreience

--- a/index.html
+++ b/index.html
@@ -1,59 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Md. Abdullah</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    \
-    <!-- Container Div Start -->
-    <div class="container">
-      <!-- Header Section START -->
-      <header>
-        <img
-          class="profile-img"
-          src="images/profile-picture.jpg"
-          alt="profile"
-        />
 
-        <div class="header-bio">
-          <h1>Md. Abdullah</h1>
-          <h3>Web Developer</h3>
-        </div>
-        <div class="header-contact">
-          <p>
-            <a href="mailto:abdullahkafi996@gmail.com"
-              >Email: abdullahkafi996@gmail.com
-            </a>
-          </p>
-          <p>
-            <a href="https://www.linkedin.com/in/md-abdullah-b344ab137/"
-              >Linkedin: Md. Abdullah
-            </a>
-          </p>
-          <p><a href="tel:+8801982541344">Phone: +8801982541344 </a></p>
-        </div>
-      </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Md. Abdullah</title>
+  <link rel="stylesheet" href="css/style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+</head>
 
-      <!-- Header Section END -->
-      <!-- Clear DIV -->
-      <div class="div-clear"></div>
-      <hr />
-      <main>
-        <!-- work experience  start -->
-        <section id="work-experience">
-          <div class="content">
-            <div class="left-div">
-              <h3>Work Experience</h3>
+<body>
+  \
+  <!-- Container Div Start -->
+  <div class="container">
+    <!-- Header Section START -->
+    <header>
+      <img class="profile-img" src="images/profile-picture.jpg" alt="profile" />
+
+      <div class="header-bio">
+        <h1>Md. Abdullah</h1>
+        <h3>Web Developer</h3>
+      </div>
+      <div class="header-contact">
+        <p>
+          <a href="mailto:abdullahkafi996@gmail.com">Email: abdullahkafi996@gmail.com
+          </a>
+        </p>
+        <p>
+          <a href="https://www.linkedin.com/in/md-abdullah-b344ab137/">Linkedin: Md. Abdullah
+          </a>
+        </p>
+        <p><a href="tel:+8801982541344">Phone: +8801982541344 </a></p>
+      </div>
+    </header>
+
+    <!-- Header Section END -->
+    <!-- Clear DIV -->
+    <div class="div-clear"></div>
+    <hr />
+    <main>
+      <!-- work experience  start -->
+      <section id="work-experience">
+        <div class="content">
+          <div class="left-div">
+            <h3>Work Experience</h3>
+          </div>
+          <div class="right-div">
+            <div class="experience-left">
+              <h3>Web Developer</h3>
+
+              <h3>bdCalling IT Ltd</h3>
+              <h4>October 2021 — Present</h4>
+              <h4>Work Stack:</h4>
+              <ul>
+                <li>Design Modern Responsive Website</li>
+                <li>WordPress Theme Development
+                </li>
+                <li>WordPress Theme Customization</li>
+                <li>WordPress Plugin Development</li>
+                <li>Figma, XD to HTML,CSS Conversion</li>
+                <li>Web App Design</li>
+              </ul>
             </div>
-            <div class="right-div">
+            <div class="experience-right">
               <h3>Intern - Web Design</h3>
 
               <h3>Shikhbe Sobai</h3>
@@ -68,226 +78,228 @@
               </ul>
             </div>
           </div>
-        </section>
-        <!-- clear div -->
-        <div class="div-clear"></div>
-        <hr class="common-hr" />
+        </div>
+      </section>
+      <!-- clear div -->
+      <div class="div-clear"></div>
+      <hr class="common-hr" />
 
-        <!--work experience end -->
-        <!-- Skill Section  start -->
-        <section id="skill">
-          <div class="content">
-            <div class="left-div">
-              <h3>Skills</h3>
-            </div>
-            <div class="right-div">
-              <h3>Front End / Web Design</h3>
-              <p>
-                * HTML, CSS, Bootstrap, JavaScript, React, Firebase, WP Theme
-                Customization.
-              </p>
-              <br />
-
-              <h3>Freelance Web Designer</h3>
-              <p>* PSD to HTML convert, Responsive Website , Landing Page.</p>
-              <br />
-
-              <h3>Database</h3>
-              <p>* MySQL, MongoDB, Firebase</p>
-              <br />
-
-              <h3>Database</h3>
-              <p>
-                * OS - Linux (Ubuntu) <br />
-                * Git, GitHub
-              </p>
-            </div>
+      <!--work experience end -->
+      <!-- Skill Section  start -->
+      <section id="skill">
+        <div class="content">
+          <div class="left-div">
+            <h3>Skills</h3>
           </div>
-        </section>
-        <!-- clear div -->
-        <div class="div-clear"></div>
-        <hr class="common-hr" />
+          <div class="right-div">
+            <h3>Front End / Web Design</h3>
+            <p>
+              * HTML, CSS, Bootstrap, JavaScript, React, Firebase, WP Theme
+              Customization.
+            </p>
+            <br />
 
-        <!--work experience end -->
-        <!-- certification Section  start -->
-        <section id="certification">
-          <div class="content">
-            <div class="left-div">
-              <h3>Certification</h3>
-            </div>
+            <h3>Freelance Web Designer</h3>
+            <p>* PSD to HTML convert, Responsive Website , Landing Page.</p>
+            <br />
 
-            <div class="right-div">
-              <div class="certification-left">
-                <h3>Responsive Web Design</h3>
+            <h3>Database</h3>
+            <p>* MySQL, MongoDB, Firebase</p>
+            <br />
 
-                <h3>Shikhbe Sobai</h3>
-                <h4>Jun 2019- November 2019</h4>
-                <h4>Learn:</h4>
-                <ul>
-                  <li>HTML 5</li>
-                  <li>CSS 3</li>
-                  <li>BootStrap</li>
-                  <li>JavaScript</li>
-                  <li>PSD to HTML</li>
-                  <li>WordPress Theme Customization</li>
-                </ul>
-              </div>
-
-              <div class="certification-right">
-                <h3>Complete Web Design</h3>
-                <h3>Programming Hero</h3>
-                <h4>January 2021- Ongoing</h4>
-                <h4>Learn:</h4>
-                <ul>
-                  <li>HTML 5</li>
-                  <li>CSS 3</li>
-                  <li>BootStrap</li>
-                  <li>JavaScript, ES6</li>
-                  <li>React Js</li>
-                  <li>Firebase</li>
-                </ul>
-              </div>
-            </div>
+            <h3>Database</h3>
+            <p>
+              * OS - Linux (Ubuntu) <br />
+              * Git, GitHub
+            </p>
           </div>
-        </section>
-        <!-- clear div -->
-        <div class="div-clear"></div>
-        <hr class="common-hr" />
+        </div>
+      </section>
+      <!-- clear div -->
+      <div class="div-clear"></div>
+      <hr class="common-hr" />
 
-        <!--certification end -->
-
-        <!-- Education  start -->
-        <section id="education">
-          <div class="content">
-            <div class="left-div">
-              <h3>Education</h3>
-            </div>
-
-            <div class="right-div">
-              <div class="education-left">
-                <h3>B.Sc. In Computer Science & Engineering</h3>
-
-                <h3>SouthEast University</h3>
-                <h4>September 2016 — July 2021</h4>
-                <p><strong>Result:</strong> CGPA-3.40 (Scale=4.00)</p>
-              </div>
-
-              <div class="education-right">
-                <h3>Higher Secondary School Certificate (HSC)</h3>
-                <h3>Govt. Science Collage</h3>
-                <h4>June 2013 — August 2015</h4>
-
-                <p><strong>Group: </strong>Science</p>
-                <p><strong>Result: </strong> GPA-4.50 (Scale=5.00)</p>
-
-                <p><strong>Board: </strong>Dhaka</p>
-              </div>
-            </div>
+      <!--work experience end -->
+      <!-- certification Section  start -->
+      <section id="certification">
+        <div class="content">
+          <div class="left-div">
+            <h3>Certification</h3>
           </div>
-        </section>
-        <!-- clear div -->
-        <div class="div-clear"></div>
-        <hr class="common-hr" />
-        <!-- Projects  start -->
-        <section id="projects">
-          <div class="content">
-            <div class="left-div">
-              <h3>Projects</h3>
-            </div>
 
-            <div class="right-div">
+          <div class="right-div">
+            <div class="certification-left">
+              <h3>Responsive Web Design</h3>
+
+              <h3>Shikhbe Sobai</h3>
+              <h4>Jun 2019- November 2019</h4>
+              <h4>Learn:</h4>
               <ul>
-                <li>Smart Home Automation System.</li>
-                <li>
-                  Cuda - Portfolio Template
-                  (https://kafiabdullah.github.io/Cuda/)
-                </li>
-                <li>
-                  Treatment At Home Bangladesh
-                  (https://kafiabdullah.github.io/hospital/)
-                </li>
+                <li>HTML 5</li>
+                <li>CSS 3</li>
+                <li>BootStrap</li>
+                <li>JavaScript</li>
+                <li>PSD to HTML</li>
+                <li>WordPress Theme Customization</li>
+              </ul>
+            </div>
+
+            <div class="certification-right">
+              <h3>Complete Web Design</h3>
+              <h3>Programming Hero</h3>
+              <h4>January 2021- Ongoing</h4>
+              <h4>Learn:</h4>
+              <ul>
+                <li>HTML 5</li>
+                <li>CSS 3</li>
+                <li>BootStrap</li>
+                <li>JavaScript, ES6</li>
+                <li>React Js</li>
+                <li>Firebase</li>
               </ul>
             </div>
           </div>
-        </section>
-        <!-- Projects End -->
-        <!-- clear div -->
-        <div class="div-clear"></div>
-        <hr class="common-hr" />
+        </div>
+      </section>
+      <!-- clear div -->
+      <div class="div-clear"></div>
+      <hr class="common-hr" />
 
-        <!-- personal information start -->
-        <section id="personal-information">
-          <div class="content">
-            <div class="left-div">
-              <h3>Personal Information</h3>
+      <!--certification end -->
+
+      <!-- Education  start -->
+      <section id="education">
+        <div class="content">
+          <div class="left-div">
+            <h3>Education</h3>
+          </div>
+
+          <div class="right-div">
+            <div class="education-left">
+              <h3>B.Sc. In Computer Science & Engineering</h3>
+
+              <h3>SouthEast University</h3>
+              <h4>September 2016 — July 2021</h4>
+              <p><strong>Result:</strong> CGPA-3.40 (Scale=4.00)</p>
             </div>
-            <div class="right-div">
-              <p>Father’s Name: Md. Shamsul Alam</p>
-              <p>Mother’s Name: Salma khatun</p>
-              <p>Marital Status: Unmarried</p>
 
-              <p>DoB: 5 May, 1998</p>
-              <p>Nationality: Bangladeshi</p>
-              <p>Religion: Islam</p>
-              <p>
-                Address: Sunamukhi, Ulia Bazar, Islampur, jamalpur 2020,
-                Mymnsingh
-              </p>
+            <div class="education-right">
+              <h3>Higher Secondary School Certificate (HSC)</h3>
+              <h3>Govt. Science Collage</h3>
+              <h4>June 2013 — August 2015</h4>
+
+              <p><strong>Group: </strong>Science</p>
+              <p><strong>Result: </strong> GPA-4.50 (Scale=5.00)</p>
+
+              <p><strong>Board: </strong>Dhaka</p>
             </div>
           </div>
-        </section>
-
-        <!-- personal information end -->
-        <!-- clear div -->
-        <div class="div-clear"></div>
-        <hr class="common-hr" />
-
-        <!-- interest section start -->
-        <section id="interest">
-          <div class="content">
-            <div class="left-div">
-              <h3>Interest</h3>
-            </div>
-            <div class="right-div">
-              <p>Explore New Technology, Programming, Drinking Coffee</p>
-            </div>
+        </div>
+      </section>
+      <!-- clear div -->
+      <div class="div-clear"></div>
+      <hr class="common-hr" />
+      <!-- Projects  start -->
+      <section id="projects">
+        <div class="content">
+          <div class="left-div">
+            <h3>Projects</h3>
           </div>
-        </section>
 
-        <!-- interest end -->
-        <!-- clear div -->
-        <div class="div-clear"></div>
-        <hr class="common-hr" />
-
-        <!-- reference section start -->
-        <section id="reference">
-          <div class="content">
-            <div class="left-div">
-              <h3>Reference</h3>
-            </div>
-            <div class="right-div">
-              <p>Md. Ishan Arefin Hossain</p>
-              <p>Lecturer</p>
-              <p>Dept. of CSE, Southeast University</p>
-              <p><strong>Email:</strong> ishanarefin@gmail.com</p>
-            </div>
+          <div class="right-div">
+            <ul>
+              <li>Smart Home Automation System.</li>
+              <li>
+                Cuda - Portfolio Template
+                (https://kafiabdullah.github.io/Cuda/)
+              </li>
+              <li>
+                Treatment At Home Bangladesh
+                (https://kafiabdullah.github.io/hospital/)
+              </li>
+            </ul>
           </div>
-        </section>
+        </div>
+      </section>
+      <!-- Projects End -->
+      <!-- clear div -->
+      <div class="div-clear"></div>
+      <hr class="common-hr" />
 
-        <!-- reference end -->
-        <!-- clear div -->
-        <div class="div-clear"></div>
-        <hr class="common-hr" />
-      </main>
+      <!-- personal information start -->
+      <section id="personal-information">
+        <div class="content">
+          <div class="left-div">
+            <h3>Personal Information</h3>
+          </div>
+          <div class="right-div">
+            <p>Father’s Name: Md. Shamsul Alam</p>
+            <p>Mother’s Name: Salma khatun</p>
+            <p>Marital Status: Unmarried</p>
 
-      <footer class="bottom-container">
-          <a href="https://www.facebook.com/abdullah.27">Facebook</a>
-          <a href="https://www.linkedin.com/in/md-abdullah-b344ab137/">Linkedin</a>
-          <a href="https://github.com/kafiabdullah">GitHub</a>
-          <p>Copyright &copy; Abdullah 2021</p>
-      </footer>
-    </div>
+            <p>DoB: 5 May, 1998</p>
+            <p>Nationality: Bangladeshi</p>
+            <p>Religion: Islam</p>
+            <p>
+              Address: Sunamukhi, Ulia Bazar, Islampur, jamalpur 2020,
+              Mymnsingh
+            </p>
+          </div>
+        </div>
+      </section>
 
-    <!-- Container Div END -->
-  </body>
+      <!-- personal information end -->
+      <!-- clear div -->
+      <div class="div-clear"></div>
+      <hr class="common-hr" />
+
+      <!-- interest section start -->
+      <section id="interest">
+        <div class="content">
+          <div class="left-div">
+            <h3>Interest</h3>
+          </div>
+          <div class="right-div">
+            <p>Explore New Technology, Programming, Drinking Coffee</p>
+          </div>
+        </div>
+      </section>
+
+      <!-- interest end -->
+      <!-- clear div -->
+      <div class="div-clear"></div>
+      <hr class="common-hr" />
+
+      <!-- reference section start -->
+      <section id="reference">
+        <div class="content">
+          <div class="left-div">
+            <h3>Reference</h3>
+          </div>
+          <div class="right-div">
+            <p>Md. Ishan Arefin Hossain</p>
+            <p>Lecturer</p>
+            <p>Dept. of CSE, Southeast University</p>
+            <p><strong>Email:</strong> ishanarefin@gmail.com</p>
+          </div>
+        </div>
+      </section>
+
+      <!-- reference end -->
+      <!-- clear div -->
+      <div class="div-clear"></div>
+      <hr class="common-hr" />
+    </main>
+
+    <footer class="bottom-container">
+      <a href="https://www.facebook.com/abdullah.27">Facebook</a>
+      <a href="https://www.linkedin.com/in/md-abdullah-b344ab137/">Linkedin</a>
+      <a href="https://github.com/kafiabdullah">GitHub</a>
+      <p>Copyright &copy; Abdullah 2021</p>
+    </footer>
+  </div>
+
+  <!-- Container Div END -->
+</body>
+
 </html>
